# networkx-gdf

./: CHANGELOG.md  README.md  networkx_gdf.py  pyproject.toml  requirements.txt  setup.py
docs/source/: index.rst
src/networkx_gdf/: networkx_gdf.py
tests/: test.py  test_karate_club.py
