[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "networkx-gdf"
version = "1.5.3"
description = "Python package to read and write NetworkX graphs in GDF (Graph Data Format)."
requires-python = ">=3.7"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["Network", "Graph", "GDF"]
authors = [
    {name = "Nelson Aloysio Reis de Almeida Passos", email = "nelson.reis@phd.unipi.it"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "networkx >=2.1",
    "pandas >=1.1.0",
]

[project.urls]
Homepage = "https://pypi.org/p/networkx-gdf/"
Documentation = "https://networkx-gdf.readthedocs.io"
Repository = "https://github.com/nelsonaloysio/networkx-gdf"
Issues = "https://github.com/nelsonaloysio/networkx-gdf/issues"
Changelog = "https://github.com/nelsonaloysio/networkx-gdf/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docs = [
    "sphinx-autodoc-typehints >=1.23.0",
    "sphinx-rtd-theme >=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["networkx_gdf*"]
exclude = ["networkx_gdf.tests*"]
